--- a/Views/Accounts/Index.cshtml
+++ b/Views/Accounts/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<quan_ly_do_boi.Models.Account>
+﻿@model IEnumerable<Light_Garden.Models.Account>
 
 @{
     ViewData["Title"] = "Index";
