--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using quan_ly_do_boi
-@using quan_ly_do_boi.Models
+﻿@using Light_Garden
+@using Light_Garden.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
